Gateway/Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-gateway
  namespace: gateway
spec:
  gatewayClassName: kong-gateway-class
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: cinephoria.lol
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: kong-tls
    - name: proxy
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
